tests/NormalTests/paczka1/fuzzy1/47616364.err
Error in line 5: q2tA07VhdQ S239 97,6
Error in line 4: A837 S239 94,8
Error in line 20: CkXJaLH A837 10,1
Error in line 22: CkXJaLH A934 96,5
Error in line 29: 3T1Bhc A83s 282,4
Error in line 33: A837 A934 13,8
